--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.9.7",
+    "webpack-jarvis": "^0.3.0"
   }
 }
